diesel_compile_tests/tests/fail/ilike_only_compiles_for_pg.stderr
error[E0277]: `ILike<name, Bound<Text, &str>>` is no valid SQL fragment for the `Sqlite` backend
    --> tests/fail/ilike_only_compiles_for_pg.rs:23:18
     |
  LL |         .execute(&mut connection);
     |          ------- ^^^^^^^^^^^^^^^ the trait `QueryFragment<Sqlite>` is not implemented for `ILike<name, Bound<Text, &str>>`
     |          |
     |          required by a bound introduced by this call
     |
     = note: this usually means that the `Sqlite` database system does not support 
             this SQL syntax
help: the trait `QueryFragment<Sqlite, diesel::query_builder::private::NotSpecialized>` is not implemented for `ILike<name, Bound<Text, &str>>`
      but trait `QueryFragment<Pg, diesel::query_builder::private::NotSpecialized>` is implemented for it
    --> DIESEL/diesel/diesel/src/pg/expression/operators.rs
     |
  LL | infix_operator!(ILike, " ILIKE ", backend: Pg);
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     = help: for that trait implementation, expected `Pg`, found `Sqlite`
     = note: required for `Grouped<ILike<name, Bound<Text, &str>>>` to implement `QueryFragment<Sqlite>`
     = note: 3 redundant requirements hidden
     = note: required for `SelectStatement<FromClause<table>, DefaultSelectClause<...>, ..., ...>` to implement `QueryFragment<Sqlite>`
     = note: required for `SelectStatement<FromClause<table>, DefaultSelectClause<...>, ..., ...>` to implement `ExecuteDsl<diesel::SqliteConnection, Sqlite>`
note: required by a bound in `diesel::RunQueryDsl::execute`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn execute(self, conn: &mut Conn) -> QueryResult<usize>
     |        ------- required by a bound in this associated function
...
LL |         Self: methods::ExecuteDsl<Conn>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::execute`
  
          = note: this error originates in the macro `$crate::__diesel_operator_body` which comes from the expansion of the macro `infix_operator` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `ILike<name, Bound<Text, &str>>` is no valid SQL fragment for the `Mysql` backend
    --> tests/fail/ilike_only_compiles_for_pg.rs:29:18
     |
  LL |         .execute(&mut connection);
     |          ------- ^^^^^^^^^^^^^^^ the trait `QueryFragment<Mysql>` is not implemented for `ILike<name, Bound<Text, &str>>`
     |          |
     |          required by a bound introduced by this call
     |
     = note: this usually means that the `Mysql` database system does not support 
             this SQL syntax
help: the trait `QueryFragment<Mysql, diesel::query_builder::private::NotSpecialized>` is not implemented for `ILike<name, Bound<Text, &str>>`
      but trait `QueryFragment<Pg, diesel::query_builder::private::NotSpecialized>` is implemented for it
    --> DIESEL/diesel/diesel/src/pg/expression/operators.rs
     |
  LL | infix_operator!(ILike, " ILIKE ", backend: Pg);
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     = help: for that trait implementation, expected `Pg`, found `Mysql`
     = note: required for `Grouped<ILike<name, Bound<Text, &str>>>` to implement `QueryFragment<Mysql>`
     = note: 3 redundant requirements hidden
     = note: required for `SelectStatement<FromClause<table>, DefaultSelectClause<...>, ..., ...>` to implement `QueryFragment<Mysql>`
     = note: required for `SelectStatement<FromClause<table>, DefaultSelectClause<...>, ..., ...>` to implement `ExecuteDsl<diesel::MysqlConnection, Mysql>`
note: required by a bound in `diesel::RunQueryDsl::execute`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn execute(self, conn: &mut Conn) -> QueryResult<usize>
     |        ------- required by a bound in this associated function
...
LL |         Self: methods::ExecuteDsl<Conn>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::execute`
  
          = note: this error originates in the macro `$crate::__diesel_operator_body` which comes from the expansion of the macro `infix_operator` (in Nightly builds, run with -Z macro-backtrace for more info)
For more information about this error, try `rustc --explain E0277`.
